recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: not found: value drotie
	drotie(angle)
        ^