recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	avance(length)
	drotie(angle)
	avance(length*shrink)
	

	

	
	
	
}
